タスクの登録・更新を多少ちゃんと動くように実装した
